ecmascript/parser/tests/test262-error-references/fail/e3a388ec11e4d061.js.stderr
error: Expected LParen
 --> $DIR/tests/test262-parser/fail/e3a388ec11e4d061.js:1:18
  |
1 | var obj = { *test** }
  |                  ^^

